--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
   "dependencies": {
     "axios": "^0.27.2",
     "express": "^4.18.1",
-    "nunjucks": "^3.2.3",
-    "pug": "^3.0.2"
+    "nunjucks": "^3.2.3"
   }
 }
