--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node app.js",
     "dev": "nodemon app.js",
-    "test": "jest --silent"
+    "test": "jest --silent",
+    "docs": "./node_modules/jsdoc/jsdoc.js -c ./jsdoc.conf.json"
   },
   "jest": {
     "testPathIgnorePatterns": [
@@ -19,6 +20,7 @@
   "dependencies": {
     "axios": "^0.27.2",
     "express": "^4.18.1",
+    "jsdoc": "^3.6.10",
     "nunjucks": "^3.2.3"
   }
 }
