--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "axios": "^0.27.2",
     "express": "^4.18.1",
+    "jest": "^28.1.0",
     "jsdoc": "^3.6.10",
     "nunjucks": "^3.2.3"
   }
