--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^0.27.2",
+    "bcrypt": "^5.0.1",
+    "dotenv": "^16.0.0",
     "express": "^4.18.1",
     "jest": "^28.1.0",
     "jsdoc": "^3.6.10",
-    "nunjucks": "^3.2.3"
+    "nunjucks": "^3.2.3",
+    "pg": "^8.7.3"
   }
 }
