--- a/package.json
+++ b/package.json
@@ -24,7 +24,10 @@
     "express": "^4.18.1",
     "jest": "^28.1.0",
     "jsdoc": "^3.6.10",
+    "memory-cache": "^0.2.0",
     "nunjucks": "^3.2.3",
-    "pg": "^8.7.3"
+    "pg": "^8.7.3",
+    "supertest": "^6.2.3",
+    "uuid": "^8.3.2"
   }
 }
