--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^4.18.1",
     "jest": "^28.1.0",
     "jsdoc": "^3.6.10",
+    "jsonwebtoken": "^8.5.1",
     "memory-cache": "^0.2.0",
     "nunjucks": "^3.2.3",
     "pg": "^8.7.3",
