--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "MasterMind Game",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js",
-    "dev": "nodemon app.js",
+    "start": "node server.js",
+    "dev": "nodemon server.js",
     "test": "jest --silent",
     "docs": "./node_modules/jsdoc/jsdoc.js -c ./jsdoc.conf.json"
   },
@@ -29,5 +29,8 @@
     "pg": "^8.7.3",
     "supertest": "^6.2.3",
     "uuid": "^8.3.2"
+  },
+  "engines": {
+    "node": "16.x"
   }
 }
