--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -36,7 +36,7 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
     - name: Setup database
-      run: psql -f data.sql "postgresql://user:pass@localhost:5432/mastermind"
+      run: psql -f data_test.sql "postgresql://user:pass@localhost:5432/mastermind"
     - run: npm ci
     - run: npm run build --if-present
     - run: npm test
