--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "node server.js",
     "dev": "nodemon server.js",
     "test": "jest --silent",
-    "docs": "./node_modules/jsdoc/jsdoc.js -c ./jsdoc.conf.json"
+    "docs": "./node_modules/jsdoc/jsdoc.js -c ./jsdoc.conf.json",
+    "deploy": "git push heroku master"
   },
   "jest": {
     "testPathIgnorePatterns": [
